# Meal-Planner

./: .gitignore  README.md  greencloud.yml
backend/: .dockerignore  Dockerfile  main.py  meals.json  pyproject.toml  requirements.txt
backend/API/: meal_plans.py  meals.py
backend/Db/: models.py
backend/schema/: meal.py  meal_plan.py
backend/services/: meal_plan_generator.py  storage.py
frontend/: .dockerignore  Dockerfile  docker-entrypoint.sh  nginx.conf  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: MealList.tsx  MealPlan.tsx  MealPlanComponent.tsx  Sidebar.tsx
